--- a/cart/templates/cart/checkout.html
+++ b/cart/templates/cart/checkout.html
@@ -21,8 +21,15 @@
 
       <h5>Details</h5>
       <div class="mb-3">
-        <label for="full_name" class="form-label">Full Name *</label>
-        <input type="text" class="form-control" id="full_name" name="full_name" required>
+        <label for="first_name" class="form-label">First Name *</label>
+        <input type="text" class="form-control" id="first_name" name="first_name"
+       value="{{ profile_data.first_name|default_if_none:'' }}" required>
+      </div>
+
+      <div class="mb-3">
+        <label for="last_name" class="form-label">Last Name *</label>
+        <input type="text" class="form-control" id="last_name" name="last_name"
+       value="{{ profile_data.last_name|default_if_none:'' }}" required>
       </div>
 
       <div class="mb-3">
