--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% block title %}Home – Strum & Strings{% endblock %}
 {% block content %}
-<div class="container h-100 main-picture">
-  <div class="container">
+<div class="h-100 main-picture">
+  <div>
     <!-- Hero Section -->
     <section class="hero home-hero text-center my-auto">
       <h1 class="display-4">Welcome to Strum & Strings</h1>
