--- a/static/css/base.css
+++ b/static/css/base.css
@@ -33,7 +33,7 @@ main {
     align-items: center;
     margin: 0;
     padding: 0;
-    width: 100vw;
+    width: 100%;
     position: relative;
     overflow: hidden;
 }
