amended placeholder namer

--- a/products/templates/products/products_list.html
+++ b/products/templates/products/products_list.html
@@ -127,7 +127,7 @@
             >
           {% else %}
             <img
-              src="{% static 'images/placeholder.png' %}"
+              src="{% static 'images/music_placeholder.png' %}"
               alt="Placeholder"
               class="img-fluid w-100 rounded shadow-sm"
             >
