--- a/accounts/templates/accounts/admin_dashboard.html
+++ b/accounts/templates/accounts/admin_dashboard.html
@@ -22,21 +22,23 @@
         <div class="card shadow-sm border-0 p-4 slide-in">
           <div class="card-body">
             <h4 class="card-title mb-4 text-center section-heading">Quick Admin Links</h4>
-
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">
-                <a href="{% url 'admin:index' %}" class="text-decoration-none">Django Admin Panel</a>
-              </li>
-              <li class="list-group-item">
-                <a href="{% url 'accounts:add_product' %}" class="text-decoration-none">Add New Product</a>
-              </li>
-              <li class="list-group-item">
-                <a href="{% url 'accounts:order_list' %}" class="text-decoration-none">View All Orders</a>
-              </li>
-              <li class="list-group-item">
-                <a href="{% url 'accounts:product_catalog' %}" class="text-decoration-none">Manage Product Catalog</a>
-              </li>
-            </ul>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">
+              <a href="{% url 'admin:index' %}" class="text-decoration-none">Django Admin Panel</a>
+            </li>
+            <li class="list-group-item">
+              <a href="{% url 'accounts:add_product' %}" class="text-decoration-none">Add New Product</a>
+            </li>
+            <li class="list-group-item">
+              <a href="{% url 'accounts:order_list' %}" class="text-decoration-none">View All Orders</a>
+            </li>
+            <li class="list-group-item">
+              <a href="{% url 'accounts:product_catalog' %}" class="text-decoration-none">Manage Product Catalog</a>
+            </li>
+            <li class="list-group-item">
+              <a href="{% url 'accounts:newsletter_list' %}" class="text-decoration-none">Manage Newsletter Subscribers</a>
+            </li>
+          </ul>
           </div>
         </div>
       </div>
