--- a/accounts/templates/accounts/confirm_delete_product.html
+++ b/accounts/templates/accounts/confirm_delete_product.html
@@ -1,5 +1,13 @@
 {% extends 'base.html' %}
+{% load static %}
+
+{% block extra_css %}
+{{ block.super }}
+  <link rel="stylesheet" href="{% static 'cart/css/cart.css' %}">
+{% endblock %}
+
 {% block title %}Delete Product{% endblock %}
+{% block main_class %}container py-5 mt-5{% endblock %}
 
 {% block content %}
 <div class="container mt-5 mb-5">
