updated css for categories and created add product and admin dashboard css

--- a/accounts/templates/accounts/add_product.html
+++ b/accounts/templates/accounts/add_product.html
@@ -3,7 +3,7 @@
 
 {% block extra_css %}
   {{ block.super }}
-  <link rel="stylesheet" href="{% static 'accounts/css/products.css' %}">
+  <link rel="stylesheet" href="{% static 'accounts/css/add_product.css' %}">
 {% endblock %}
 
 {% block title %}Add New Product – Strum & Strings{% endblock %}
