--- a/accounts/templates/accounts/order_list.html
+++ b/accounts/templates/accounts/order_list.html
@@ -10,6 +10,16 @@
 {% block main_class %}container py-5 mt-5{% endblock %}
 
 {% block content %}
+<div>
+    <!-- Breadcrumb Navigation -->
+  <nav aria-label="breadcrumb" id="breadcrumb-main">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"><a href="{% url 'home' %}">Admin Dashboard</a></li>
+      <li class="breadcrumb-item active" aria-current="page">All Orders</li>
+    </ol>
+  </nav>
+</div>
+
 <div class="text-center mb-5">
   <h1 class="display-5 fw-bold">All Orders</h1>
   <p class="text-muted">Review recent orders placed by users.</p>
