--- a/cart/templates/cart/checkout.html
+++ b/cart/templates/cart/checkout.html
@@ -34,18 +34,21 @@
 
       <div class="mb-3">
         <label for="email" class="form-label">Email Address *</label>
-        <input type="email" class="form-control" id="email" name="email" required>
+          <input type="email" class="form-control" id="email" name="email"
+         value="{{ profile_data.email|default_if_none:'' }}" required>
       </div>
 
       <div class="mb-3">
         <label for="phone" class="form-label">Phone Number *</label>
-        <input type="text" class="form-control" id="phone" name="phone" required>
+          <input type="text" class="form-control" id="phone" name="phone"
+         value="{{ profile_data.phone|default_if_none:'' }}" required>
       </div>
 
       <h5 class="mt-4">Delivery</h5>
       <div class="mb-3">
         <label for="street_address1" class="form-label">Street Address *</label>
-        <input type="text" class="form-control" id="street_address1" name="street_address1" required>
+          <input type="text" class="form-control" id="street_address1" name="street_address1"
+         value="{{ profile_data.street_address1|default_if_none:'' }}" required>
       </div>
       
       <div class="mb-3">
@@ -55,17 +58,20 @@
       
       <div class="mb-3">
         <label for="country" class="form-label">Country *</label>
-        <input type="text" class="form-control" id="country" name="country" required>
+        <input type="text" class="form-control" id="country" name="country"
+         value="{{ profile_data.country|default_if_none:'' }}" required>
       </div>
       
       <div class="mb-3">
         <label for="postal_code" class="form-label">Postal Code *</label>
-        <input type="text" class="form-control" id="postal_code" name="postal_code" required>
+        <input type="text" class="form-control" id="postal_code" name="postal_code"
+         value="{{ profile_data.postal_code|default_if_none:'' }}" required>
       </div>
       
       <div class="mb-3">
         <label for="town_or_city" class="form-label">Town or City *</label>
-        <input type="text" class="form-control" id="town_or_city" name="town_or_city" required>
+        <input type="text" class="form-control" id="town_or_city" name="town_or_city"
+         value="{{ profile_data.town_or_city|default_if_none:'' }}" required>
       </div>
 
       <button type="submit" class="btn btn-primary mt-3">
