--- a/templates/base.html
+++ b/templates/base.html
@@ -36,104 +36,83 @@
   </head>
   <body>
     <div class="wrapper d-flex flex-column">
-      <!-- Header -->
-      <header class="fixed-top">
-        <nav class="navbar navbar-expand-lg navbar-dark container-fluid">
-          <div class="navbar-brand-container">
-            <a class="navbar-brand" href="{% url 'home' %}">Strum & Strings</a>
-          </div>
+  <!-- Header -->
+  <header class="fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark container-fluid">
+      <div class="navbar-brand-container">
+        <a class="navbar-brand" href="{% url 'home' %}">Strum & Strings</a>
+      </div>
 
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-            style="margin-left: 25px"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+        style="margin-left: 25px"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <form
-              class="d-flex mx-auto"
-              method="get"
-              action="{% url 'products:products_list' %}"
-            >
-              <input
-                class="form-control me-2 w-100"
-                type="search"
-                name="q"
-                placeholder="Search"
-                aria-label="Search"
-                value="{{ query|default:'' }}"
-              />
-              <button class="btn btn-custom-search" type="submit">
-                Search
-              </button>
-            </form>
-
-            <ul
-              class="navbar-nav ms-auto list-inline list-unstyled"
-              id="nav-links-one"
-            >
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'products:products_list' %}"
-                  >Shop</a
-                >
-              </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link"
-                  href="{% url 'categories:categories_list' %}"
-                  >Categories</a
-                >
-              </li>
-              {% if user.is_authenticated %}
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'accounts:profile' %}"
-                  >Welcome, {{ user.username }}</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
-              </li>
-              {% if user.is_staff %}
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'accounts:admin_dashboard' %}"
-                  >Admin Dashboard</a
-                >
-              </li>
-              {% endif %} {% else %}
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'account_login' %}">Login</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'account_signup' %}"
-                  >Sign Up</a
-                >
-              </li>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <!-- Nav Links -->
+        <ul class="navbar-nav ms-auto text-center w-100 mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'products:products_list' %}">Shop</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'categories:categories_list' %}">Categories</a>
+          </li>
+          {% if user.is_authenticated %}
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'accounts:profile' %}">Welcome, {{ user.username }}</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
+          </li>
+          {% if user.is_staff %}
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'accounts:admin_dashboard' %}">Admin Dashboard</a>
+          </li>
+          {% endif %}
+          {% else %}
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'account_login' %}">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'account_signup' %}">Sign Up</a>
+          </li>
+          {% endif %}
+          <li class="nav-item">
+            <a class="nav-link position-relative" href="{% url 'cart:view_cart' %}">
+              Cart
+              {% if cart_item_count > 0 %}
+              <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                {{ cart_item_count }}
+              </span>
               {% endif %}
-              <li class="nav-item">
-                <a
-                  class="nav-link position-relative"
-                  href="{% url 'cart:view_cart' %}"
-                >
-                  Cart {% if cart_item_count > 0 %}
-                  <span
-                    class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
-                  >
-                    {{ cart_item_count }}
-                  </span>
-                  {% endif %}
-                </a>
-              </li>
-            </ul>
-          </div>
-        </nav>
-      </header>
+            </a>
+          </li>
+        </ul>
+
+        <!-- Search Form -->
+        <form class="d-flex mt-lg-0 w-100" method="get" action="{% url 'products:products_list' %}">
+          <input
+            class="form-control me-2 w-100"
+            type="search"
+            name="q"
+            placeholder="Search"
+            aria-label="Search"
+            value="{{ query|default:'' }}"
+          />
+          <button class="btn btn-custom-search" type="submit">Search</button>
+        </form>
+      </div>
+    </nav>
+  </header>
+
 
       <main class="{% block main_class %}flex-grow-1{% endblock %}">
         {% block content %}{% endblock %}
@@ -208,7 +187,6 @@
     <script src="https://js.stripe.com/v3/"></script>
     {% endblock %}
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     {% block postloadjs %} {{ block.super }}
     <script src="{% static 'js/back_to_top.js' %}"></script>
     {% endblock %}
